dev/test_programs/INVALID/group12/weed_errors/short_var_decl_error2.go
package main

func main() {
	x, y, z := 0, 2
	println(x, y, z)
}